# XmakeProjectManagerForQtCreator

./: .gitignore  CMakeLists.txt  EmptyQtCreatorPlugin.json.in  Plugin.json.in  README.md  XmakeProjectManagerForQtCreator.cpp  XmakeProjectManagerForQtCreator.h  XmakeProjectManagerForQtCreator.json.in  XmakeProjectManagerForQtCreator.qrc  XmakeProjectManagerForQtCreator_global.h  XmakeProjectManagerForQtCreator_zh_CN.ts  XmakeProjectManagerForQtCreatorconstants.h  XmakeProjectManagerForQtCreatortr.h  builddirparameters.cpp  builddirparameters.h  cmake_global.h  cmakeabstractprocessstep.h  cmakebuildconfiguration.h  cmakebuildstep.h  cmakebuildsystem.cpp  cmakebuildsystem.h  cmakefilecompletionassist.h  cmakeparser.h  cmakeproject.h  cmakeprojectimporter.cpp  cmakeprojectmanager.cpp  cmakeprojectplugin.cpp  cmaketool.cpp  configmodel.cpp  configmodel.h  configmodelitemdelegate.cpp  configmodelitemdelegate.h  emptyqtcreatorplugin.cpp  emptyqtcreatorplugin.h  emptyqtcreatorplugin_global.h  emptyqtcreatorpluginconstants.h  fileapidataextractor.cpp  fileapidataextractor.h  fileapiparser.cpp  fileapiparser.h  (+73 more)
.github/workflows/: build_cmake.yml
settingPage/: settings.cpp  settings.h
translations/: XmakeProjectManagerForQtCreator_zh_CN.qm
